# API_Cpp

./: CMakeLists.txt
libsofa/: .gitignore
libsofa/src/: SOFA.h  SOFAEmitter.h  SOFAFile.cpp  SOFAFile.h  SOFAFreeFieldDirectivityTF.cpp  SOFAFreeFieldDirectivityTF.h  SOFAReceiver.h  sofainfo.cpp
src/: CMakeLists.txt  SOFAEmitter.cpp  SOFAFile.cpp  SOFAFile.h  SOFAFreeFieldDirectivityTF.cpp  SOFAReceiver.cpp  sofainfo.cpp
utils/: CMakeLists.txt
